--- a/Database/PostgreSQL/備份與還原.md
+++ b/Database/PostgreSQL/備份與還原.md
@@ -6,7 +6,7 @@
     - 對應的 restore 指令是 `psql`
 - Custom-format archive
     - 對應的 restore 指令是 `pg_restore`
-    - 檔案所佔空間較小
+    - 備份檔較小
 
 根據要輸出的檔案格式執行以下指令的其中一個：
 
@@ -35,14 +35,13 @@ pg_dump -Fp --clean --if-exists --create my_db > my_backup.sql
 使用 `psql`：
 
 ```bash
-psql {DB_NAME} < {DUMP_FILE_NAME}
+psql {DB_NAME} < {DUMP_FILE}
 ```
 
 如果你要 restore 的資料庫本來就存在，但你想要捨棄它並完全採用新的，有以下兩種做法：
 
 - 先手動 `DROP` 既有的 database，然後重新 `CREATE`，再執行 restore 指令
-- 因為 dump file 就是 SQL，所以可以直接在產生 dump file 時，最前面加上 `DROP` 與 `CREATE` 指令
-    - 對應到 `pg_dump` 指令的 `--clean` 與 `--create` options
+- 因為 dump file 就是 SQL，所以可以直接在產生 dump file 時，最前面加上 `DROP` 與 `CREATE` 指令（對應到 `pg_dump` 指令的 `--clean` 與 `--create` options）
 
 ### Restore with Custom-Format Archive
 
