--- a/Operating System/零碎筆記.draft.md
+++ b/Operating System/零碎筆記.draft.md
@@ -1,11 +1,11 @@
-### 學習資源
+# 學習資源
 
 - [Linux 讀書會](https://hackmd.io/@combo-tw/Linux-%E8%AE%80%E6%9B%B8%E6%9C%83)
 - [CS:APP 整理](https://hackmd.io/@sysprog/CSAPP/https%3A%2F%2Fhackmd.io%2Fs%2FSJ7V-qikG)
 - [Linux 核心設計／實作 | 成大資工系 | jserv](https://wiki.csie.ncku.edu.tw/linux/schedule)
 - [CMU 15-213](https://scs.hosted.panopto.com/Panopto/Pages/Sessions/List.aspx#maxResults=250&folderID=%22b96d90ae-9871-4fae-91e2-b1627b43e25e%22)
 
-### Concurrency vs. Parallelism
+# Concurrency vs. Parallelism
 
 若一個時間點執行一個任務，卻在多個任務間快速切換，就可以讓使用者「感覺」多個任務是同時被運行的，此即 concurrency。Multi-threading 就可以達到 concurrency 的效果。
 
@@ -15,23 +15,21 @@
 
 **Sequential** 既是 concurrency 的相反詞也是 parallelism 的相反詞。
 
----
+# Multi-Core Processor vs. Multiprocessor
 
-### Multi-Core Processor vs. Multiprocessor
-
-##### Multi-Core Processor
+### Multi-Core Processor
 
 - 具有多個 cores 的 CPU
 
-##### Multiprocessor
+### Multiprocessor
 
-- 一台機器有多個 CPUs，這些 CPU 可能是 single-core 或 multi-core
-- 較 reliable，因為當其中一個 CPU crash 時，還有其它的可以用
-- 當多個 CPUs 同時運作時，throughput (吞吐量) 變高
-- 當某個 CPU 正在使用某個 I/O device 時，其它 CPU 就不能使用相同的 I/O device，避免 [[Deadlocks]]
-- OS 較難實作，因為必須處理 processors 之間的溝通
-- 若設計所有 CPUs 共享 memory，則所有 CPU 共用同一個 bus，隨著 bus 越忙，每個 CPU idle 的時間也會變多，這類的 multiprocessor 又叫做 symmetric multiprocessor
-- 若設計每個 CPU 有自己專屬的 memory，則 CPU idle 的時間變少，但每個 CPU 可用的 memory 也變少
+- 一台機器有多個 CPUs，這些 CPU 可能是 single-core 或 multi-core。
+- 較 reliable，因為當其中一個 CPU crash 時，還有其它的可以用。
+- 當多個 CPUs 同時運作時，throughput (吞吐量) 變高。
+- 當某個 CPU 正在使用某個 I/O device 時，其它 CPU 就不能使用相同的 I/O device，避免 [[Deadlocks]]。
+- OS 較難實作，因為必須處理 processors 之間的溝通。
+- 若設計所有 CPUs 共享 memory，則所有 CPU 共用同一個 bus，隨著 bus 越忙，每個 CPU idle 的時間也會變多，這類的 multiprocessor 又叫做 symmetric multiprocessor。
+- 若設計每個 CPU 有自己專屬的 memory，則 CPU idle 的時間變少，但每個 CPU 可用的 memory 也變少。
 
 | |Multi-Core Processor|Multiprocessor|
 |:-:|:-:|:-:|
@@ -42,20 +40,20 @@
 |Configuration|👍 不需要|複雜|
 |Price|👍 較低|較高|
 
-參考資料：<https://www.javatpoint.com/multiprocessor-and-multicore-system-in-operating-system>
+**參考資料**
 
----
+- <https://www.javatpoint.com/multiprocessor-and-multicore-system-in-operating-system>
 
-### Race Condition
+# Race Condition
 
 #TODO 
 
----
-
-### Thundering Herd Problem
+# Thundering Herd Problem
 
 [維基百科](https://en.wikipedia.org/wiki/Thundering_herd_problem)
 
 一個 event 同時觸發很多 threads 或 processes，但因為只有一個 thread 或 process 可以接住這個 event，所以導致所有 threads 與 processes 會為了接住這個 event 而彼此競爭資源，從而導致系統出現 freezing。
 
----
+# Linux Distribution
+
+有時被簡稱為 Linux distro，常聽到的 Ubuntu、Debian、Fedora 就是不同的 Linux distro。
