--- a/Programming Language/零碎筆記.md
+++ b/Programming Language/零碎筆記.md
@@ -1,4 +1,4 @@
-### 程式語言的演進
+# 程式語言的演進
 
 ![[evolution-of-programming-language.png]]
 
@@ -9,35 +9,42 @@
 - 第四代程式語言：Query language
     - e.g. SQL
 
----
+# Binary Method
 
-### Binary Method
+若 class `A` 中有 method `m`，`m` 所接收的參數的 class 都是 `A`，則稱 `m` 為一個 binary method。
 
-若 class `A` 中有 method `m` 接收的參數的 class 都是 `A`，則稱 `m` 為一個 binary method。
+e.g.
+
+```TypeScript
+class Human {
+    // ...
+    public marry(mate: Human): void {
+        // ...
+    }
+}
+```
+
+上面這個例子中，`marry` 就是一個 binary method。
 
 #TODO
 
----
+# Parameters vs. Arguments
 
-### Parameters vs. Arguments
+### Parameter (參數)
 
-- **Parameter (參數)**
+定義一個 method 或 function 時所要求的。
 
-    定義一個 method 或 function 時所要求的。
+A parameter is the variable which is part of the method's signature (method declaration).
 
-    A parameter is the variable which is part of the method's signature (method declaration).
+### Argument (引數)
 
-- **Argument (引數)**
+呼叫 method 或 function 時，實際填入的值。
 
-    呼叫 method 或 function 時，實際填入的值。
+An argument is an [[#Expression vs. Statement|expression]] used when calling the method.
 
-    An argument is an [[#Expression vs. Statement|expression]] used when calling the method.
+# Expression vs. Statement
 
----
-
-### Expression vs. Statement
-
-##### Expression
+### Expression
 
 一段「可以產生一個值」的「values、operators 與 functions 的組合」，比如：
 
@@ -51,7 +58,7 @@ abs(x) + floor(int(y)) + 1
 a === b ? 0 : 1
 ```
 
-##### Statement
+### Statement
 
 一段「執行某項任務」的程式碼，本身不會產生值，比如：
 
@@ -70,9 +77,7 @@ a = 10
 # ...
 ```
 
----
-
-### Syntax Error vs. Semantic Error
+# Syntax Error vs. Semantic Error
 
 - **Syntax Error**
 
@@ -82,17 +87,13 @@ a = 10
 
     泛指因程式邏輯錯誤而衍生的錯誤，比如本來預期 function 會回傳 `int`，實際卻回傳 `string`，導致無法進行相除的動作；以 index 取 array 中的元素但 index 超過 array 的長度… 等，這類問題較難完全被編輯器發現，此時就須要開發者自行 debug。
 
----
-
-### Recursion vs. Iteration
+# Recursion vs. Iteration
 
 執行 recursive function 時，會有一個 **call stack** 記錄每一次 function call，所以 recursion 所能執行的深度是有限的，call stack 的大小通常會由一個全域變數（[[Recursion Depth Limit|以 Python 為例]]）所控制，其目的是防止 call stack 佔滿記憶體，當 call stack 被塞滿後就會出現 stack-overflow error，此時便無法繼續往下執行 recursion。
 
 反之，iteration 可執行的次數不會受到記憶體大小限制，所以在不考慮時間的情況下，iteration 可以無止盡地執行下去。
 
----
-
-### Casting vs. Coercing
+# Casting vs. Coercing
 
 Casting 指的是人為將變數的型別轉換；coercing 則是指由於程式語言原生的特性而產生的型別轉換。
 
@@ -111,9 +112,7 @@ const d = a + b;  // b is automatically (implicitly) conveted to string
 console.log(d);  // 11
 ```
 
----
-
-### Formatter vs. Linter
+# Formatter vs. Linter
 
 Linter 的功能包括：
 
