--- a/Programming Language/程式語言的分類.md
+++ b/Programming Language/程式語言的分類.md
@@ -1,16 +1,16 @@
 # 強型別 vs. 弱型別
 
-### 強型別 (Strongly Typed)
+### 強型別 (Strongly-Typed)
 
-不允許在賦予變數值時進行 "implicit conversion"，以 Python 為例：
+不允許在賦予變數值時進行 "implicit conversion"。以 Python 為例：
 
 ```Python
 x = 123 + "456"  # TypeError: unsupported operand type(s) for +: 'int' and 'str'
 ```
 
-### 弱型別 (Weakly Typed)
+### 弱型別 (Weakly-Typed)
 
-- 可以在賦予變數值時進行 "implicit conversion"，比如 JavaScript：
+- 可以在賦予變數值時進行 implicit conversion。以 JavaScript 為例：
 
     ```JavaScript
     let x = 123 + "456";
@@ -22,7 +22,7 @@ x = 123 + "456"  # TypeError: unsupported operand type(s) for +: 'int' and 'str
 
     比如 JavaScript 的 `==`、`===` 與 `Object.is`（詳見 [MDN Web Docs](https://developer.mozilla.org/zh-TW/docs/Web/JavaScript/Equality_comparisons_and_sameness)）
 
-一個程式語言並非以二分法區分型別的強弱，而是一個光譜，比如 Java 通常被認為是強型別語言，但其實在 Java 中很常使用以下方法將 `int` 轉為 `String`：
+一個程式語言並非以二分法區分型別的強弱，只有程度的多寡，比如 Java 通常被認為是強型別語言，但其實在 Java 中很常使用以下方法將 `int` 轉為 `String`：
 
 ```Java
 int a = 1;
@@ -31,7 +31,7 @@ String b = "" + a;
 
 # 動態型別 vs. 靜態型別
 
-### 動態型別 (Dynamic)
+### 動態型別 (Dynamic-Type)
 
 變數宣告後，可以改變型別。以 Python 為例：
 
@@ -40,7 +40,7 @@ x = 0
 x = "A"
 ```
 
-### 靜態型別 (Static)
+### 靜態型別 (Static-Type)
 
 變數宣告後，不能改變其型別。以 TypeScript 為例：
 
@@ -54,10 +54,11 @@ x = "A";  // Type 'string' is not assignable to type 'number'.
 
 ![[strong-weak-dynamic-static.png]]
 
-# 編譯式 vs. 直譯式
+# 編譯式語言 vs. 直譯式語言
 
->[!Note]
->其實根本無法把程式語言乾淨地二分為編譯式語言與直譯式語言，因為我們對所有程式語言都可以選擇走編譯的流程，也可以選擇走直譯的流程，只是要看有沒有人寫出「編譯那個語言的工具」／「直譯那個語言的環境」而已。更多詳細資訊請見[[Compilation vs Interpretation|本文]]
+其實根本無法把程式語言乾淨地二分為編譯式語言與直譯式語言，因為我們對所有程式語言都可以選擇走編譯的流程，也可以選擇走直譯的流程，只是要看有沒有人寫出「編譯那個語言的工具」／「直譯那個語言的環境」而已。
+
+更多詳細資訊請見 [[Compilation vs Interpretation]]。
 
 # Class-Based vs. Prototype-Based
 
